<resources>
    <string name="app_name">CatchIT</string>

    <!-- Toolbar titles -->
    <string name="title_log_in">Log in</string>
    <string name="title_register">Register</string>
    <string name="title_profile">Profile</string>
    <string name="title_sequences">Sequences</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_create_sequence">Create sequence</string>

    <!-- Textviews  -->
    <!-- Login fragment  -->
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="tv_remember_me">Remember Me</string>
    <string name="tv_login">Log in</string>
    <string name="tv_register">Register</string>

    <!-- Register fragment  -->
    <string name="tv_male">Male</string>
    <string name="tv_female">Female</string>
    <string name="tv_trainer">Trainer</string>
    <string name="tv_player">Player</string>
    <string name="tv_birth_date">Date of birth</string>
    <string name="tv_set_date">Set date</string>

    <string name="error_field_required">Field required</string>
    <string name="error_username_already_exists">Username already exists</string>
    <string name="error_password_doesnt_match">Passwords does not match</string>
    <string name="error_username_doesnt_exist">Username does not exist</string>
    <string name="error_incorrect_password">Incorrect passwords</string>
    <string name="error_username_already_in_use">The name already exists. Please use a different name.</string>

    <!-- Profile fragment  -->
    <string name="done">Done</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Sequence fragment  -->
    <string name="back">Back</string>
    <string name="importSeq">Import</string>
    <string name="play">Play</string>
    <string name="downloadSeq">Download sequence</string>
    <string name="download">Download</string>

    <!-- Save sequence dialogFragment  -->
    <string name="tv_save_sequence">Save sequence</string>
    <string name="tv_save_sequence_hint">Enter sequence name</string>

    <!-- Game fragment  -->
    <string name="sp_prompt">Select player</string>
    <string name="tv_continue">Continue</string>
    <string name="tv_exit">Exit</string>
    <string name="tv_score">Score</string>


    <!-- Settings fragment  -->
    <string name="tv_sounds">Sounds</string>
    <string name="tv_languages">Languages</string>


    <!-- Spinner array -->
    <string-array name="languages_array">
        <item>English</item>
        <item>Hungarian</item>
    </string-array>


</resources>